--- a/about.html
+++ b/about.html
@@ -99,14 +99,14 @@
     <div class="indiactor">
         <nav class="navbar navbar-expand-lg">
             <div class="container-xl">
-                <a class="navbar-brand" href="#"><img src="images/logo.png" alt="logo" class="img-fluid w-100"></a>
+                <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo" class="img-fluid w-100"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <i class="fa fa-close fa-bars"></i>
                         </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav m-auto mb-2 mb-lg-0" id="smooth">
                         <li class="nav-item ">
-                            <a class="nav-link scroll-link" href="#banner"><span class="nav-line">home</span></a>
+                            <a class="nav-link scroll-link" href="index.html"><span class="nav-line">home</span></a>
                         </li>
                         <li class="nav-item ">
                             <a class="nav-link" href="about.html"><span class="nav-line">about us</span></a>
@@ -1027,7 +1027,6 @@
     <script src="js/waypoints.min.js"></script>
     <script src="js/jquery.counterup.min.js"></script>
     <script src="js/progresscircle.js"></script>
-    <script src="js/mixitup.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/custom.js"></script>
 </body>
