--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     <!--topper part start-->
 
     <section id="topper">
-        <div class="container-xl">
+        <div class="container-xl container">
             <div class="row">
                 <div class="col-lg-6 col-6 col-sm-8 col-md-7">
                     <div class="row">
@@ -98,7 +98,7 @@
 
     <div class="indiactor">
         <nav class="navbar navbar-expand-lg">
-            <div class="container-xl">
+            <div class="container-xl container">
                 <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo" class="img-fluid w-100"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <i class="fa fa-close fa-bars"></i>
@@ -462,7 +462,7 @@
     <!--service part start-->
 
     <section id="service" class="about-multi-main">
-        <div class="container-xl">
+        <div class="container-xl container">
             <div class="row breadcumb">
                 <div class="col-xl-5 m-auto">
                     <div class="head text-center">
@@ -656,7 +656,7 @@
     <!--footer part start-->
 
     <section id="footer">
-        <div class="container-xl">
+        <div class="container-xl container">
             <div class="row">
                 <div class="col-xl-3 col-12 col-sm-6 col-lg-3 footer-logo-inner">
                     <div class="footer-logo-part">
@@ -981,7 +981,7 @@
     <!--back to top start-->
 
     <section id="back">
-        <div class="container-xl">
+        <div class="container-xl container">
             <div class="back-top">
                 <a href="#"><i class="fa fa-chevron-up"></i></a>
             </div>
@@ -992,7 +992,7 @@
     <!--copy right start-->
 
     <section id="copy">
-        <div class="container-xl">
+        <div class="container-xl container">
             <div class="copy-main">
                 <div class="row">
                     <div class="col-xl-5 col-lg-5">
